# src/controllers/order.ts
@@ -1,11 +1,13 @@
-import { Body, Get, JsonController, Post } from "routing-controllers";
+import { Authorized, Body, CurrentUser, Get, JsonController, Post } from "routing-controllers";
 import { OpenAPI } from "routing-controllers-openapi";
 import { injectable } from 'tsyringe'
 import { ListOrderUseCase } from "../application/use-case/order/list-order-use-case";
 import { PaginationSchema } from "../domain/schemas";
-import { StrictQueryParams } from "../external/web/validator";
+import { ArraySerializer, Serializer, StrictQueryParams } from "../external/web/validator";
 import { CreateOrderUseCase } from "../application/use-case/order/create-order-use-case";
 import { CreateOrderSchema } from "../domain/schemas/orders/create-order-schema";
+import { UserEntity } from "../domain/entities/user";
+import { ListOrdersSerializer, OrderSerializer } from "../domain/serializers/orders/order-all-relations";
 
 @JsonController('/order')
 @injectable()
@@ -19,7 +21,7 @@ export class Product {
         summary: 'List orders',
         description: 'This route list orders'
     })
-
+    @Serializer(ListOrdersSerializer)
     @Get()
     list(@StrictQueryParams() pagination: PaginationSchema) {
         return this.listOrderUseCase.execute({ pagination })
@@ -29,8 +31,10 @@ export class Product {
         summary: 'create orders',
         description: 'This route create orders'
     })
+    @Serializer(OrderSerializer)
+    @Authorized()
     @Post()
-    create(@Body() data: CreateOrderSchema) {
-        return this.createOrderUseCase.execute({ data })
+    async create(@Body() data: CreateOrderSchema, @CurrentUser() user: UserEntity) {
+        return await this.createOrderUseCase.execute({ data: { ...data, user } })
     }
 }
