# src/domain/serializers/order-items/index.ts
@@ -1,5 +1,7 @@
-import { Exclude, Expose } from 'class-transformer'
-import { IsNumber, IsUUID } from 'class-validator'
+import { Exclude, Expose, Type } from 'class-transformer'
+import { IsDefined, IsNumber, IsObject, IsUUID, ValidateNested } from 'class-validator'
+import { ProductEntity } from '../../entities/product'
+import { ProductRelationsSerializer } from '../product/product-relations'
 
 @Exclude()
 export class OrderItemsSerializer {
@@ -22,4 +24,11 @@ export class OrderItemsSerializer {
     createdAt: Date
 
     updatedAt: Date
+
+    @IsDefined()
+    @IsObject()
+    @ValidateNested()
+    @Type(() => ProductRelationsSerializer)
+    @Expose()
+    product: Partial<ProductEntity>
 }
